--- a/monitor.html
+++ b/monitor.html
@@ -4,9 +4,9 @@
     <script>
       const ekko = new Ekko({
         host:
-          "http://ekko-ekkos-DXOLAZG8XB-14233476.us-east-2.elb.amazonaws.com",
+          "http://ekko-ekkos-144LA4X918SBV-105734816.us-east-2.elb.amazonaws.com",
         jwt:
-          "yJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJhZG1pbiI6dHJ1ZSwiYXBwTmFtZSI6ImxvYWQtdGVzdGluZyIsImlhdCI6MTYyMDE1MDkxNH0.LMTnDVH4829j_slzDjcfzxmsUO2alzP2l_nbY_E9CMs",
+          "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJhZG1pbiI6dHJ1ZSwiYXBwTmFtZSI6ImxvYWQtdGVzdGluZyIsImlhdCI6MTYyMDE2NDA2OH0.Is-0BLboOa0nPIPATPL0YpnrL1RbbAehaDDUoe6s24M",
         appName: "load-testing",
       });
 
@@ -14,6 +14,9 @@
 
       ekko.addListener({
         message: (e) => {
+          console.log(e);
+        },
+        status: (e) => {
           console.log(e);
         },
       });
