update monitor html:

--- a/monitor.html
+++ b/monitor.html
@@ -20,7 +20,7 @@
       });
 
       // setInterval(() => {
-      //   console.log("hi");
+      //   ekko.publish({ channel: "greeting", message: { text: "hi" } });
       // }, 2000);
     </script>
   </body>
