--- a/monitor.html
+++ b/monitor.html
@@ -2,11 +2,29 @@
   <body>
     <script src="https://d3irfuxwybyrt2.cloudfront.net/ekko-client-v2.2.6.js"></script>
     <script>
+      const appName = "lt";
+      const host =
+        "http://ekko-ekkos-1QZ0F5RQERLFR-1436539638.us-east-1.elb.amazonaws.com";
+      const jwt =
+        "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJhZG1pbiI6dHJ1ZSwiYXBwTmFtZSI6Imx0IiwiaWF0IjoxNjIxNjAzMTI4fQ.2GdhLVJ9_h-dso0486JXKyN681M2Kg8PpY4dgQIdb1w";
       const ekko = new Ekko({
-        host: "http://ekko-ekkos-T56QXUWSORKN-964893551.us-east-2.elb.amazonaws.com",
-        jwt: "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJhZG1pbiI6dHJ1ZSwiYXBwTmFtZSI6ImxvYWR0ZXN0IiwiaWF0IjoxNjIxNDgwNDc3fQ.JlYYcvZ-_GI7r6lwFvDpCTzBI7aI-BoAZUE-EavUJXs",
-        appName: "loadtest",
+        appName,
+        host,
+        jwt,
+        uuid: sessionStorage.getItem("uuid") || "",
       });
+
+      // const appName = "lt3";
+      // const host =
+      //   "localhost";
+      // const jwt =
+      //   "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJhZG1pbiI6ZmFsc2UsImFwcE5hbWUiOiJsdDMiLCJpYXQiOjE2MjE1NDExODJ9.okj7LyqWf_jWKmn79YOdClC7jGJaTRgihVrF_GpESPU";
+      // const ekko = new Ekko({
+      //   appName,
+      //   host,
+      //   jwt,
+      //   uuid: sessionStorage.getItem("uuid") || "",
+      // });
 
       ekko.subscribe({ channels: ["greeting"] });
 
