updated for 10 lambda test

--- a/monitor.html
+++ b/monitor.html
@@ -3,8 +3,10 @@
     <script src="https://d3irfuxwybyrt2.cloudfront.net/ekko-client-v2.2.6.js"></script>
     <script>
       const ekko = new Ekko({
-        host: "http://ekko-ekkos-YK9SB7GQBXVU-1280264013.us-east-2.elb.amazonaws.com",
-        jwt: "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJhZG1pbiI6dHJ1ZSwiYXBwTmFtZSI6ImxvYWR0ZXN0IiwiaWF0IjoxNjIxNTU2MTM2fQ.TFcvBGww4qgg04snU59En9pJEESD2otToqkdASn-FZg",
+        host:
+          "http://ekko-ekkos-1QZ0F5RQERLFR-1436539638.us-east-1.elb.amazonaws.com",
+        jwt:
+          "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJhZG1pbiI6ZmFsc2UsImFwcE5hbWUiOiJsb2FkdGVzdCIsImlhdCI6MTYyMTYzNDIwNX0.B-Uv1ETUw3xvYF74PPrvfUTFcHoktfpHerGefniOaqQ",
         appName: "loadtest",
       });
 
